tests/error/trace-wrong-argument.uplc
(program 0.0.0 [[(force (builtin trace)) (con integer 9)] (con integer 2)])